更新启动脚本